[project]
name = "lev.whtcjdtc2008.hello_world"
version = "0.1.3"
description = ""
dynamic = ["classifiers"]
requires-python = ">=3.10"
dependencies = [
    "levrt~=1.3",
    "scipy>=1.6.1",
    "numpy>=1.22.4",
]

[[project.authors]]
name = "Haotian.Wang"
email = "whtcjdtc2007@163.com"

[project.license]
text = "MIT"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
editable-backend = "path"
includes = ["lev"]

[[tool.pdm.source]]
name = "levhub"
url = "https://__token__:${LEVHUB_TOKEN}@pypi.lev.zone/simple/"
